# LangChain-repo

langchain/: .gitignore  1-create_agent.ipynb  2-model-intergreation.ipynb  3.tools.ipynb  4-messages.ipynb  5-structuredoutput.ipynb  6-middleware.ipynb  langchain_guardrails.ipynb  pyproject.toml
langchain/Chatmodels/: chatmodel_hf.py  local_chatmodel_hf.py
langchain/EmbeddingModels/: 1.google_embedding_model.py  2.embedding_hf_local.py  3.document_similarity.py
langchain/krish nayak cclatest/: 1-create_agent.ipynb  2-model-intergreation.ipynb  3.tools.ipynb  5-structuredoutput.ipynb  fix_models.py
langchain/langchainStructuredOutput/: typedict_demo.py  with_structured_output_typedict.py
